--- a/obh-backend/Gemfile
+++ b/obh-backend/Gemfile
@@ -26,6 +26,7 @@ gem 'uri'
 gem 'rest-client'
 gem 'fast_jsonapi'
 gem 'rack-cors'
+gem 'pry'
 # Use Active Storage variant
  gem 'image_processing', '~> 1.2'
 
