--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+obh-frontend/src/components/SignUpComponent.js
